tests/NormalTests/paczka1/small_fuzzy/40758226.err
Error in line 8: TxKooRZ A594 74,9
Error in line 4: j8KN S194 40,9
Error in line 3: knQLMvE A666 79,6
